--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,10 @@ body, html {
 	width: 40%;
 }
 
+.title {
+	font-family: 'Montserrat', sans-serif;
+}
+
 .block_text h3 {
 	text-align: left;
 }
@@ -108,7 +112,7 @@ nav ul {
 	list-style: none;
 	margin: 0 10px;
 	padding: 0;
-	font-family: 'Poiret One', cursive;
+	font-family: 'Montserrat', sans-serif;
 }
 
 nav li {
